2003-05-19  Glynn Foster  <glynn.foster@sun.com>

	* log_repaint.c: Fixed #103481 for large logs crashing.

2003-05-19  Glynn Foster  <glynn.foster@sun.com>

	* Defining timezonevar before including time.h is necessary 
	for using timezone variable on Cygwin. Patch from Masahiro Sakai.
	Fixes #111267.

2003-05-19  Glynn Foster  <glynn.foster@sun.com>

	* logview.schemas.in: Fix #102234.

2003-05-19  Glynn Foster  <glynn.foster@sun.com>

	* logview.c: Use gnome-system-log in the gconf key, rather than
	logview, since that is what the schema is for. Fixes #103484.

2003-05-19  Glynn Foster  <glynn.foster@sun.com>

	* about.c: Fix #101772.

2003-05-19  Glynn Foster  <glynn.foster@sun.com>

	* logview.c: Add check, just in case this fixes #111949.

2003-05-19  Glynn Foster  <glynn.foster@sun.com>

	* logview.c: Avoid double free. Patch from marcus@freebsd.org.

2003-02-23  Takeshi AIHANA <aihana@gnome.gr.jp>

	* help/ja/*: added Japanese translations by
				KAMAGASAKO Masatoshi <emerald@gnome.gr.jp>.
	* help/ja/Makefile.am:  added ja into SUBDIRS.

2003-02-16  Kjartan Maraas  <kmaraas@gnome.org>

	* logview.c: Fix a leak.
	
2003-02-11  Glynn Foster  <glynn.foster@sun.com>

	* logview.c, monitor.c: Mark some strings for translation.
	Thanks to Maxim for pointing this out. Fixes #104541.

2003-01-23  Breda McColgan <Breda.McColgan@sun.com>

        * help/C/gnome-system-log.xml: updated for GNOME 2.2
        * help/C/gnome-system-log-C.omf: updated manual date
          and version number
        * help/C/figures/syslog_window.png: updated screenshot
          of the latest application

2002-01-07 Dennis Cranston <dennis_cranston@yahoo.com>
	* pixmaps/Makefile.am:  removed logview.xpm reference from 
	pixmaps_DATA & EXTRA_DIST.

	* pixmaps/logview.xpm:  remove file
	
2002-12-28 Alex Duggan <aldug@gnome.org>
	
	* about.c: use the standard gnome-log icon in the about
	dialog not the ancient GNOME one, Fixes #102773
	
2002-12-28 John Fleck <jfleck@inkstain.net>
