@@ -1,3 +1,9 @@
+2003-05-19  Christian Neumair  <chris@gnome-de.org>
+
+	* about.c: Don't mark copyright string for translation, added
+	hex-escaped copyright character, changed comment to something
+	more meaningful.
+
 2003-05-19  Glynn Foster  <glynn.foster@sun.com>
 
 	* log_repaint.c: Fixed #103481 for large logs crashing.
